--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="profile-name">Binar Flowie</div>
     <!-- 3. link -->
 
-    <a href="https://bit.ly/3KjmpDY" class="links">Flower Articel</a>
+    <a href="https://bit.ly/3KjmpDY" class="links">Flower Artificial</a>
     <a href="https://bit.ly/3zWJTtR" class="links">Snack</a>
     <a href="https://bit.ly/3K953td" class="links">Money</a>
     <a href="https://bit.ly/3nnRb4D" class="links">Blommbox</a>
