Update link html

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <div class="profile-name">Binar Flowie</div>
     <!-- 3. link -->
 
-    <a href="https://bit.ly/3KjmpDY" class="links">Flower Artificial</a>
-    <a href="https://bit.ly/3zWJTtR" class="links">Snack</a>
-    <a href="https://bit.ly/3K953td" class="links">Money</a>
-    <a href="https://bit.ly/3nnRb4D" class="links">Blommbox</a>
-    <a href="https://bit.ly/3zTW8av" class="links">WhatsApp Admin</a>
+    <a href="https://bit.ly/3tracXD" class="links">Flower Artificial</a>
+    <a href="https://bit.ly/3zWJTtR" class="links">Snack Bouquet</a>
+    <a href="https://bit.ly/3K953td" class="links">Money Bouquet</a>
+    <a href="https://bit.ly/3nnRb4D" class="links">Bloombox</a>
+    <a href="https://bit.ly/3zTW8av" class="links">Faq</a>
 
     <!-- 4. support by  -->
     <div class="profile-support1">created by</div>
